--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,15 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-  
+    container:
+      image: christiankm01/kilo:1
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
       - name: Install and Build
         run: |
+          lcc
           yarn install --frozen-lockfile
           yarn build
       - name: Deploy
